[gd_scene load_steps=22 format=3 uid="uid://cnvsdf7enjfhc"]

[ext_resource type="Script" uid="uid://cbto08ta0cnhs" path="res://display_board/gui/game_gui.gd" id="1_l6los"]
[ext_resource type="Script" uid="uid://ddw86tf5n0a3p" path="res://display_board/gui/chat/chat.gd" id="2_jhgb0"]
[ext_resource type="Texture2D" uid="uid://cvdl4nmq0po4g" path="res://display_board/gui/rotate_board/icon_repeat_light.png" id="2_say3f"]
[ext_resource type="Script" uid="uid://hiptph3k7tfk" path="res://display_board/gui/rotate_board/rotate_board.gd" id="4_7860r"]
[ext_resource type="Texture2D" uid="uid://c8robdjx21oos" path="res://display_board/gui/menu/arrow_decorative_w.png" id="4_l6los"]
[ext_resource type="Texture2D" uid="uid://w1tblj7wik4b" path="res://display_board/gui/history/y_arrow_basic_w.png" id="6_fam3x"]
[ext_resource type="Script" uid="uid://b16xpivydka0k" path="res://display_board/gui/forfeit/forfeit.gd" id="6_fiulw"]
[ext_resource type="Texture2D" uid="uid://dptr1g0sj3hgj" path="res://display_board/gui/history/y_arrow_basic_e.png" id="7_aceyr"]
[ext_resource type="Script" uid="uid://dfpulbyhjegug" path="res://display_board/gui/history/history.gd" id="7_rhlew"]
[ext_resource type="Texture2D" uid="uid://lo3d5f3kdtyr" path="res://display_board/gui/rotate_board/icon_repeat_dark.png" id="7_tvip0"]
[ext_resource type="Texture2D" uid="uid://cdd8u7chmhwbq" path="res://display_board/gui/history/r_arrow_basic_e.png" id="8_nnqnj"]
[ext_resource type="Script" uid="uid://f5oggad7b7ye" path="res://display_board/gui/multiplayer_controls.gd" id="10_bdebd"]
[ext_resource type="Texture2D" uid="uid://ckqo1g5n3semn" path="res://display_board/gui/forfeit/icon_cross.png" id="13_aceyr"]
[ext_resource type="Script" uid="uid://cplj44s2okwy7" path="res://display_board/gui/menu/menu.gd" id="14_aqogn"]
[ext_resource type="Texture2D" uid="uid://d0v4y3s5n3h1f" path="res://display_board/gui/forfeit/icon_outline_cross.png" id="15_bdebd"]
[ext_resource type="Texture2D" uid="uid://ctngtxxk6lqu6" path="res://display_board/gui/draw/w_icon_cross.png" id="15_nnqnj"]
[ext_resource type="Script" uid="uid://dtjpqno1r4hwk" path="res://display_board/gui/draw/draw.gd" id="16_qblau"]
[ext_resource type="Texture2D" uid="uid://df8lj8huducje" path="res://display_board/gui/draw/w_icon_outline_cross.png" id="18_6xuda"]

[sub_resource type="Animation" id="Animation_bdebd"]
resource_name = "flash_current"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Current:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 0.054902, 1)]
}

[sub_resource type="Animation" id="Animation_6xuda"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Current:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7rksv"]
_data = {
&"RESET": SubResource("Animation_6xuda"),
&"flash_current": SubResource("Animation_bdebd")
}

[node name="GameGUI" type="Control"]
z_index = -1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_l6los")
metadata/_edit_use_anchors_ = true

[node name="Chat" type="Control" parent="."]
self_modulate = Color(0.947199, 0.947199, 0.947199, 1)
layout_mode = 1
anchor_top = 0.000771605
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 156.5
offset_right = 472.0
offset_bottom = -156.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00268, 1)
mouse_filter = 2
script = ExtResource("2_jhgb0")

[node name="VBoxContainer" type="VBoxContainer" parent="Chat"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="Control" type="Control" parent="Chat/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"PanelBox"

[node name="Panel" type="Panel" parent="Chat/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"PanelBox"

[node name="Control" type="Control" parent="Chat/VBoxContainer/Control"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Chat/VBoxContainer/Control/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_right = -12.0
grow_horizontal = 2
grow_vertical = 2

[node name="LineEdit" type="LineEdit" parent="Chat/VBoxContainer"]
layout_mode = 2
placeholder_text = "chat"
keep_editing_on_text_submit = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -147.0
offset_right = 472.0
offset_bottom = -17.0
grow_vertical = 0
theme_type_variation = &"PanelBox"

[node name="BoardControls" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -214.0
offset_top = -54.0
offset_right = 214.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="RotateBoard" type="Button" parent="Panel/BoardControls"]
custom_minimum_size = Vector2(100, 108)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "ROTATE"
theme_type_variation = &"SquareButton"
icon = ExtResource("2_say3f")
icon_alignment = 1
expand_icon = true
script = ExtResource("4_7860r")
white_texture = ExtResource("2_say3f")
black_texture = ExtResource("7_tvip0")

[node name="History" type="HBoxContainer" parent="Panel/BoardControls"]
layout_mode = 2
script = ExtResource("7_rhlew")

[node name="Back" type="Button" parent="Panel/BoardControls/History"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "BACK"
theme_type_variation = &"SquareButton"
icon = ExtResource("6_fam3x")

[node name="Next" type="Button" parent="Panel/BoardControls/History"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "NEXT"
theme_type_variation = &"SquareButton"
icon = ExtResource("7_aceyr")

[node name="Current" type="Button" parent="Panel/BoardControls/History"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "CURRENT"
theme_type_variation = &"SquareButton"
icon = ExtResource("8_nnqnj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel/BoardControls/History"]
libraries = {
&"": SubResource("AnimationLibrary_7rksv")
}

[node name="Timer" type="Timer" parent="Panel/BoardControls/History"]
wait_time = 5.0
one_shot = true

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 199.0
offset_top = 8.0
offset_right = 424.0
offset_bottom = 135.0
theme_type_variation = &"PanelBox"
script = ExtResource("10_bdebd")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = -52.0
offset_right = 98.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2

[node name="Forfeit" type="Button" parent="Panel2/HBoxContainer"]
custom_minimum_size = Vector2(96, 104)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "CONCEDE"
theme_type_variation = &"SquareButton"
icon = ExtResource("13_aceyr")
icon_alignment = 1
expand_icon = true
script = ExtResource("6_fiulw")
inactive_texture = ExtResource("13_aceyr")
active_texture = ExtResource("15_bdebd")

[node name="Draw" type="Button" parent="Panel2/HBoxContainer"]
custom_minimum_size = Vector2(96, 104)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "OFFER DRAW"
theme_type_variation = &"SquareButton"
theme_override_font_sizes/font_size = 16
toggle_mode = true
icon = ExtResource("15_nnqnj")
expand_icon = true
script = ExtResource("16_qblau")
inactive_texture = ExtResource("15_nnqnj")
active_texture = ExtResource("18_6xuda")

[node name="Panel3" type="Panel" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 8.0
offset_right = 141.0
offset_bottom = 135.0
theme_type_variation = &"PanelBox"

[node name="Menu" type="Button" parent="Panel3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -52.0
offset_right = 48.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "MENU"
theme_type_variation = &"SquareButton"
icon = ExtResource("4_l6los")
icon_alignment = 1
script = ExtResource("14_aqogn")

[connection signal="gui_input" from="Chat/VBoxContainer/Control" to="Chat" method="_on_control_gui_input"]
[connection signal="text_submitted" from="Chat/VBoxContainer/LineEdit" to="Chat" method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="Panel/BoardControls/History/Back" to="Panel/BoardControls/History" method="_on_back_pressed"]
[connection signal="pressed" from="Panel/BoardControls/History/Next" to="Panel/BoardControls/History" method="_on_next_pressed"]
[connection signal="pressed" from="Panel/BoardControls/History/Current" to="Panel/BoardControls/History" method="_on_current_pressed"]
[connection signal="timeout" from="Panel/BoardControls/History/Timer" to="Panel/BoardControls/History" method="_on_timer_timeout"]
[connection signal="mouse_entered" from="Panel2/HBoxContainer/Forfeit" to="Panel2/HBoxContainer/Forfeit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Panel2/HBoxContainer/Forfeit" to="Panel2/HBoxContainer/Forfeit" method="_on_mouse_exited"]
